--- a/Springapp/src/main/resources/application.properties
+++ b/Springapp/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/hi
+spring.datasource.url= jdbc:mysql://localhost:3306/database
 spring.datasource.username=root
 spring.datasource.password=root
 
